# min-k-cut

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.py
cmake/: SetupLemon.cmake
data/GTGraph-rand-sweep/: rand-1024-4096.gr  rand-128-512.gr  rand-16-64.gr  rand-16384-65536.gr  rand-2048-8192.gr  rand-256-1024.gr  rand-32-128.gr  rand-4096-16384.gr  rand-512-2048.gr  rand-64-256.gr  rand-8-32.gr  rand-8192-32768.gr
data/GTGraph-rand-sweep-m/: rand-128-1024.gr  rand-128-2048.gr  rand-128-256.gr  rand-128-4096.gr  rand-128-512.gr  rand-128-8192.gr
src/: CMakeLists.txt  main.cpp  mtx_reader.hpp
src/include/: dimacs_reader.hpp  dot_writer.hpp  k_min_cut.hpp  util.hpp
src/tests/: CMakeLists.txt  test_gomory_hu.cpp  test_k_min_cut.cpp  test_mtx_reader.cpp  test_readers.cpp
